mudando filtro de transacao e alterando endpoints para retorna exceção